--- a/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
@@ -41,19 +41,16 @@
             <div class="botones uk-width-2-3@m">
                 <div>
                     <div class="titulo-section uk-text-center uk-text-bold uk-text-capitalize">Seleccione un archivo para cargar alumno</div>
-                        <label for="archivo"><span>choose your save file ...</span></label>
-                        <input id="archivo" type="file" style="display: none"/>
+                    <label for="archivo"><span>choose your save file ...</span></label>
+                    <input id="archivo" type="file" style="display: none"/>
                 </div>
-
-                    <div>
-                        <div class="titulo-section uk-text-center uk-text-bold uk-text-capitalize">Cupo de alumnos</div>
-                        <progress max="${agregarCsvControlador.totalAlumno}" value="${grupoAlumnoControlador.alumnosAsignado}"/>
-                        <span>${agregarCsvControlador.alumnosAsignado}/${grupoAlumnoControlador.totalAlumno}</span>
-                    </div>
+                <div>
+                    <div class="titulo-section uk-text-center uk-text-bold uk-text-capitalize">Cupo de alumnos</div>
+                    <progress max="${agregarCsvControlador.totalAlumno}" value="${grupoAlumnoControlador.alumnosAsignado}"></progress>
+                    <span>${agregarCsvControlador.alumnosAsignado}/${grupoAlumnoControlador.totalAlumno}</span>
+                </div>
             </div>
         </div>
-
-
         <h:panelGroup styleClass="uk-flex uk-flex-center uk-flex-wrap" >
             <div class="uk-overflow-auto uk-margin-large-top">
                 <div class="uk-flex uk-flex-right uk-margin-medium-bottom">
@@ -73,7 +70,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr >
+                    <tr>
                         <td colspan="8">
                             <h:graphicImage library="img" name="vacio.svg" width="280px" height="280px"/>
                         </td>
@@ -100,7 +97,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                        <tr >
+                        <tr>
                             <td colspan="8">
                                 <h:graphicImage library="img" name="vacio.svg" width="280px" height="280px"/>
                             </td>
@@ -109,6 +106,11 @@
                 </table>
             </div>
         </h:panelGroup>
+        <ul style="display: none">
+            <ui:repeat value="#{agregarCsvControlador.apodos}" var="apodo">
+                <li>${apodo}</li>
+            </ui:repeat>
+        </ul>
         <h:form id="formulario-alumno">
             <h:inputHidden id="apodo" value="#{agregarCsvControlador.alumnoModelo.apodo}"/>
             <h:inputHidden id="nombre" value="#{agregarCsvControlador.alumnoModelo.nombre}"/>
