--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -20,6 +20,10 @@
                         <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
                     </li>
                 </ul>
+              <ol class="uk-breadcrumb">
+                    <li><h:link outcome="dashboard" value="#{etiqueta['home']}"/></li>
+                    <li><span>Assign Activity</span></li>
+                </ol>
             </div>
             <div class="uk-navbar-left uk-hidden@m">
                 <a class="uk-navbar-toggle" uk-navbar-toggle-icon="" href="" uk-toggle="target: #menu" type="button"/>
