--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -11,10 +11,8 @@
 <ui:composition template="/template/profesor/dashboard-profesor.xhtml">
     <ui:define name="menu">
         <div>
-            <ul class="uk-subnav uk-visible@m " uk-margin="">
-                <li class="nav-sub-active">
-                    <span>#{etiqueta['home']}</span>
-                </li>
+            <ul class="uk-subnav nav-sub uk-visible@m " uk-margin="">
+                <li><span>#{etiqueta['home']}</span></li>
                 <li class="borde-menu">
                     <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
                 </li>
@@ -23,9 +21,6 @@
                     <li class="uk-text-uppercase"><h:link outcome="perfil" styleClass="letra-color-subnav uk-text-capitalize" value="edit profile"/></li>
                 </ui:remove>
             </ul>
-            <ol class="uk-breadcrumb">
-                <li><span>Principal</span></li>
-            </ol>
         </div>
         <div class="uk-navbar-left uk-hidden@m">
             <a class="uk-navbar-toggle" uk-navbar-toggle-icon="" href="" uk-toggle="target: #menu" type="button"/>
