csv validacion apodos repetidos

--- a/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
@@ -67,6 +67,7 @@
                         <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Fecha Nacimiento</span></th>
                         <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Nivel Lenguaje</span></th>
                         <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Genero</span></th>
+                        <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Validar</span></th>
                     </tr>
                     </thead>
                     <tbody>
